Fixed readme and changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-iserv-gnupg-forwarding (18.12.17-1) unstable; urgency=medium
+iserv-gnupg-forwarding (18.12.17-1) UNRELEASED; urgency=medium
 
   * Initial Release.
 
- -- Stadtteilschule Blankenese <repository@stsbl.de>  Mon, 17 Dec 2018 23:03:30 +0100
+ -- Iserv <info@iserv.eu>  Mon, 17 Dec 2018 23:03:30 +0100
