Transformed package to unofficial one

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-iserv-gnupg-forwarding (18.12.17-1) UNRELEASED; urgency=medium
+stsbl-iserv-gnupg-forwarding (18.12.17-1) UNRELEASED; urgency=medium
 
   * Initial Release.
 
