--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-stsbl-iserv-gnupg-forwarding (18.12.17-1) UNRELEASED; urgency=medium
+stsbl-iserv-gnupg-forwarding (19.06.08-1) unstable; urgency=medium
 
   * Initial Release.
 
- -- Iserv <info@iserv.eu>  Mon, 17 Dec 2018 23:03:30 +0100
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Sat, 08 Jun 2019 18:30:03 +0200
