--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (19.08.07-1) unstable; urgency=medium
+
+  * Create missing run user directory on demand
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Wed, 07 Aug 2019 06:07:47 +0200
+
 stsbl-iserv-gnupg-forwarding (19.06.08-1) unstable; urgency=medium
 
   * Initial Release.
