--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (19.08.07-3) unstable; urgency=medium
+
+  * Santized insert to exactly match pam-auth-update style
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Wed, 07 Aug 2019 06:34:05 +0200
+
 stsbl-iserv-gnupg-forwarding (19.08.07-2) unstable; urgency=medium
 
   * Fixed maintainer
