--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (19.08.27-1) unstable; urgency=medium
+
+  * Removed run directory workaround
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Tue, 27 Aug 2019 03:43:24 +0200
+
 stsbl-iserv-gnupg-forwarding (19.08.07-3) unstable; urgency=medium
 
   * Santized insert to exactly match pam-auth-update style
