--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (19.11.30-1) stable; urgency=medium
+
+  * Run pam_namespace module only for root
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Sat, 30 Nov 2019 15:29:54 +0100
+
 stsbl-iserv-gnupg-forwarding (19.08.27-1) unstable; urgency=medium
 
   * Removed run directory workaround
