--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (20.08.02-1) testing; urgency=medium
+
+  * Bumped copyright
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Sun, 02 Aug 2020 06:42:00 +0200
+
 stsbl-iserv-gnupg-forwarding (19.11.30-1) stable; urgency=medium
 
   * Run pam_namespace module only for root
