--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+stsbl-iserv-gnupg-forwarding (21.06.20.1) stable; urgency=medium
+
+  * Fixed Build-Depends
+  * Moved to iservinstall
+  * Updated copyright
+  * Added homepage
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Sun, 20 Jun 2021 23:19:14 +0200
+
 stsbl-iserv-gnupg-forwarding (20.08.02-1) testing; urgency=medium
 
   * Bumped copyright
