--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv-gnupg-forwarding (21.08.17.1) stable; urgency=medium
+
+  * Switched to git source format
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Tue, 17 Aug 2021 23:23:33 +0200
+
 stsbl-iserv-gnupg-forwarding (21.06.20.1) stable; urgency=medium
 
   * Fixed Build-Depends
